# adaptfx

./: .gitignore  LICENSE  MANUAL.md  README.md  adaptive_fractionation_single_fraction.py  adaptive_fractionation_updater.py  pyproject.toml  setup.cfg
.github/workflows/: build_publish.yml  test_build_publish.yml
DVH_figures/: AdaptFx_014_1a.fig  Parient_5_2.fig  Parient_5_4.fig  Patient_10_1.fig  Patient_10_2.fig  Patient_10_3.fig  Patient_10_4.fig  Patient_10_5.fig  Patient_10_planning.fig  Patient_1_1.fig  Patient_1_2.fig  Patient_1_3.fig  Patient_1_4.fig  Patient_1_5.fig  Patient_2_1.fig  Patient_2_2.fig  Patient_2_3.fig  Patient_2_4.fig  Patient_2_5.fig  Patient_2_planning.fig  Patient_3_2.fig  Patient_3_3.fig  Patient_3_4.fig  Patient_3_5.fig  Patient_3_planning.fig  Patient_4_1.fig  Patient_4_2.fig  Patient_4_3.fig  Patient_4_4.fig  Patient_4_5.fig  Patient_4_planning.fig  Patient_5_1.fig  Patient_5_3.fig  Patient_5_5.fig  Patient_5_planning.fig  Patient_6_1.fig  Patient_6_2.fig  Patient_6_3.fig  Patient_6_4.fig  Patient_6_5.fig  (+18 more)
GUI/: interpol2D_OARminfrac.py
Patientdata_paper/: Patient_11_1.csv  Patient_11_3.csv  Patient_11_planning.csv  Patient_12_3.csv  Patient_13_1.csv  Patient_13_2.csv  Patient_13_4.csv  Patient_14_1.csv  Patient_14_2.csv  Patient_14_3.csv  Patient_14_5.csv  Patient_14_planning.csv  Patient_15_2.csv  Patient_15_3.csv  Patient_16_1.csv  Patient_16_2.csv  Patient_1_1.csv  Patient_1_2.csv  Patient_1_3.csv  Patient_1_4.csv  Patient_1_5.csv  Patient_1_planing.csv  Patient_1_planning.csv  Patient_2_1.csv  Patient_2_2.csv  Patient_2_3.csv  Patient_2_4.csv  Patient_2_5.csv  Patient_2_planning.csv  Patient_3_1.csv  Patient_3_2.csv  Patient_3_3.csv  Patient_3_4.csv  Patient_3_5.csv  Patient_3_planning.csv  Patient_4_1.csv  Patient_4_2.csv  Patient_4_3.csv  Patient_4_4.csv  Patient_4_5.csv  (+39 more)
adaptfx/: 2D_GUI.py  2D_interpolation  3D_GUI.py  3D_adaptive_fractionation.py  Full_parameter_space_better_version.py  Interface_2D  Interface_2D.py  Interface_3D  Interface_3D.py  Inverse_gamma_distribution_preview  __init__.py  __main__.py  __simulation__.py  adaptfx_interpolation_2D.py  adaptfx_interpolation_3D.py  adaptive_fractionation_updater.py  gamma_distribution_preview.py  interpol2D_OAR.py  interpol2D_OARminfrac.py  interpol2D_tumor.py  interpol3D.py  main.py  maths.py  radiobiology.py  single.py  single_discrete.py  single_interpolation.py  test.py  updater.py
adaptfx/Extended_GUIs/2D_extensions/: 2D_extended_GUI  2D_extended_scrolling_GUI.py  interpol2D_OAR_min_max  interpol2D_min_max.py
adaptfx/Extended_GUIs/3D_extensions/: 3D_extended_GUI  GUI_class_scroll.py  interpol3_min_max.py
adaptfx/common/: radiobiology.py
adaptfx/console/: aft.py
adaptfx/discrete_programs/: single_discrete.py  updater_discrete.py
adaptfx/handler/: aft_utils.py  messages.py
adaptfx/reinforce/: fraction_minimisation.py  oar_minimisation.py  track_tumor_oar.py  tumor_maximisation.py
adaptfx/t_distribution/: 2D_GUI.py  3D_GUI.py  Inverse_gamma_distribution_preview.py  interpol2D_OAR_tdist.py  interpol2D_tumor_tdist.py  interpol3D_tdist.py
adaptfx_old/: __init__.py  __simulation__.py  gamma_distribution_preview.py  helpers.py  interpol2D_tumor.py  interpol3D.py  simulation.py
adaptfx_old/discrete_programs/: single_discrete.py  updater_discrete.py
adaptfx_old/reinforce/: fraction_minimisation_old.py  oar_minimisation_old.py
adaptfx_old/t_distribution/: 2D_GUI.py  Inverse_gamma_distribution_preview.py  interpol2D_OAR_tdist.py  interpol2D_tumor_tdist.py  interpol3D_tdist.py
src/: __init__.py  aft.py  aft_utils.py  c_evaluation.py  const_eval.py  constants.py  fraction_minimisation.py  maths.py  new.py  oar_minimisation.py  planning.py  radiobiology.py  reinforce_oar.py
src/adaptfx/: __init__.py  aft.py  aft_messages.py  aft_prompt.py  aft_utils.py  c_evaluation.py  constants.py  maths.py  n_sim.py  planning.py  radiobiology.py  reinforce.py  reinforce_frac.py  reinforce_oar.py  reinforce_old.py  visualiser.py
src/adaptsim/: __init__.py  ast.py  constants.py  visualiser.py  visualiser_data.py
src/common/: __init__.py  constants.py  maths.py  plan.py  radiobiology.py
src/console/: __init__.py  aft.py
src/handler/: __init__.py  aft_utils.py  messages.py
src/reinforce/: __init__.py  fraction_minimisation.py  oar_minimisation.py  plan.py  track_tumor_oar.py  tumor_maximisation.py
work/: c0_frac.txt  c10_nospikes_frac.txt  c10_nospikes_highres.txt  c10_spikes_frac.txt  c15_streaks_frac.txt  c15_streaks_frac_highres.txt  c1_nostreaks_frac.txt  example_0.json  example_1.json  example_2.json  example_3.json  example_4.json  example_5.json  example_6.json  example_7.json  frac.txt  frac_example.json  frac_old.txt  oar.txt  oar_example.json  oar_old.txt  test_instructions.txt  test_old.txt  testing.json
