[build-system]
requires = [
    "setuptools >= 61",
    "setuptools_scm",
    "wheel",
]

[project]
name = "adaptfx"
version = "0.0.1"
description = "Package for computing adaptive fractionation plans in Radiotherapy"
authors = [
    { name = "Yoel Pérez Haas", email = "yoel.perezhaas@uzh.ch"},
    { name = "Janic Tom Weber", email = "janic.weber@uzh.ch"}
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["cancer", "fractionation", "model", "radiotherapy", "reinforcement-learning"]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "numpy",
    "scipy",
    "pandas",
]

#dynamic = ["version"]

[project.urls]
source = "https://github.com/openAFT/Adaptive-fractionation"


#[tool.setuptools_scm]
#write_to = "adaptfx/_version.py"
#local_scheme = "no-local-version"

#[tool.setuptools.dynamic]
#version = {attr = "adaptfx._version.version"}

[tool.setuptools.packages.find]
where = ["adaptfx"]
include = ["*"]

[project.scripts]
aft = "console.aft:main"


#[tool.isort]
#line_length = 79
#multi_line_output = 3
#include_trailing_comma = true
#force_grid_wrap = 0
#use_parentheses = true
#ensure_newline_before_comments = true

#[tool.black]
#line-length = 88
#target-version = ['py36']
