[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm",
    "wheel",
]

[project]
name = "adaptfx"
description = "Package for computing adaptive fractionation plans in Radiotherapy"
authors = [
    { name = "Janic Tom Weber", email = "janic.weber@uzh.ch"},
    { name = "Yoel Pérez Haas", email = "yoel.perezhaas@uzh.ch"}

]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["cancer", "fractionation", "model", "radiotherapy", "reinforcement-learning"]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "numpy",
    "scipy",
    "pandas",
]

dynamic = ["version"]

[project.urls]
source = "https://github.com/openAFT/Adaptive-fractionation"


[tool.setuptools_scm]
write_to = "adaptfx/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
version = {attr = "adaptfx._version.version"}

[tool.setuptools.packages.find]
where = ["adaptfx"]
include = ["*"]

[project.scripts]
aft = "console.aft:main"