[build-system]
requires = [
    "setuptools >= 59",
    "setuptools_scm",
    "wheel",
]

[project]
name = "adaptfx"
description = "Package for computing dose fractionation schemes in MR guided Adaptive Radiotherapy"
authors = [
    { name = "Janic Tom Weber", email = "janic.weber@uzh.ch"},
    { name = "Yoel Pérez Haas", email = "yoel.perezhaas@uzh.ch"}

]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["fractionation", "adaptive radiotherapy", "reinforcement-learning"]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy == 1.24.1",
    "scipy == 1.10.0",
    "matplotlib == 3.6.3",
    "pyqt6 == 6.4.0"
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/openAFT/adaptfx"


[tool.setuptools_scm]
write_to = "src/adaptfx/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
version = {attr = "adaptfx._version.version"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[project.scripts]
aft = "adaptfx.aft:main"
