[metadata]
name = example-pkg-YOEL
version = 0.0.1
author = Yoel Pérez Haas
author_email = yoel.perezhaas@uzh.ch
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YoelPH/Adaptive-fractionation-2D
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = adaptfx
packages = find:
python_requires = >=3.6

[options.packages.find]
where = adaptfx
